--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,13 @@
 /*********  GENERAL BODY STYLES  *********/
 
+* {
+  outline: red 1px solid;
+}
+
 body {
 	background: #000;
+	margin: 0;
+	padding: 0;
 }
 
 
@@ -9,7 +15,7 @@ body {
 
 .main {
 	background: #fff;
-	margin: 5em 0;
+	margin-top: 5em;
 	padding-left: 100px;
 	min-width: 1200px;
 	height: 500px;
@@ -23,18 +29,21 @@ body {
 .ryu {
 	width: 659px;
 	height: 494px;
-	display: float;
-	float: left;
+/*	display: float;
+	float: left;*/
+	margin-bottom: 0;
 }
 
 .hadouken {
   background-image: url('../images/hadouken.gif');
   width: 156px; 
   height: 90px;
-  display: none;
+/*  display: none;*/
   float: left;
   position: absolute;
   z-index: 10;
+  top: 175px;
+  left: 600px;
 }
 
 .ryu_still, .ryu_ready, .ryu_throwing {
@@ -42,7 +51,18 @@ body {
 	height: 494px;
 }
 
-.ryu_ready, .ryu_throwing {
+/*.ryu_ready, .ryu_throwing {
+	display: block;
+}*/
+
+.ryu_throwing {
+	display: block;
+}
+
+.ryu_ready {
+	display: none;
+}
+.ryu_still, .ryu_ready {
 	display: none;
 }
 
@@ -54,7 +74,7 @@ body {
 	background-image: url('../images/ryu-standing-still.png');
 }
 
-.ryu-throwing {
+.ryu_throwing {
   background-image: url('../images/ryu-throwing-hadouken.png');
 }
 
